<resources>
    <string name="app_name">ArtGallery</string>
    <string name="editText">Enter Text</string>
    <string name="btn_publish">Publish</string>

    <string name="congrats_text">Your Logged In Yay</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="btn_signin">Sign in</string>
    <string name="hint_comment">Whats up?</string>
    <string name="menu_addPost">Add</string>
    <string name="menu_cancelPost">Cancel</string>
    <string name="btnaddImage"> Add Image </string>
    <string name="select_post_image">Post Image</string>
    <string name="change_post_image">Change post image</string>
    <string name="menu_deletePost">Delete</string>

</resources>
